# BlockMe

./: .gitignore  CONFIGURATION.md  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
backend/: pom.xml
backend/src/main/java/com/blockme/api/: ApiApplication.java
backend/src/main/java/com/blockme/api/block/: Block.java  BlockCategory.java  BlockController.java  BlockRepository.java  BlockService.java  BlockVersion.java  BlockVersionRepository.java
backend/src/main/java/com/blockme/api/common/: GlobalExceptionHandler.java
backend/src/main/java/com/blockme/api/ingest/: IngestController.java  MojangIngestService.java
backend/src/main/resources/: application.properties
backend/src/test/java/com/blockme/api/: ApiApplicationTests.java
blockme/: __init__.py  constants.py  convert.py  image_modes.py  logger.py  mapping.py  palette.py  skin_fetch.py  utils.py
data/: blocks.json  blocktypes.json  palettes.json  settings.default.json
database/: ingest.py
database/migrations/: V1__create_mc_version.sql  V2__create_block.sql  V3__create_block_version.sql  V4__create_textures.sql  V5__create_skin_cache.sql
frontend/: .gitignore  Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.tsx  Scene.tsx  main.tsx
frontend/src/components/: BlockMeshes.tsx  DownloadButtons.tsx  HomeScreen.tsx  MaterialList.tsx  ResultModal.tsx
frontend/src/hooks/: useThemeColors.ts
frontend/src/lib/: download.ts  materialList.ts  nbtParser.ts  skinApi.ts  textureMap.ts
frontend/src/styles/: theme.css
frontend/src/types/: schematic.ts
(+13 files in other folders)
